Speed improvement to main stream page by way of smaller pagination size.  Pagination size is now configurable.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -71,6 +71,10 @@ defaults: &defaults
   admins:
     - 'example_user1dsioaioedfhgoiesajdigtoearogjaidofgjo'
 
+  # How many posts to load at a time on stream pages.
+  # Both initial load and subsequent AJAX hits.
+  stream_pagination_size: 10
+
   # Mount resque-web into routes
   # This allows an administrator to see info about the workers
   mount_resque_web: true
@@ -127,7 +131,7 @@ defaults: &defaults
 
   # The path to the sendmail binary. Ignored if mailer_method is not set to sendmail
   sendmail_location: '/usr/sbin/sendmail'
-  
+
   # Set this to true if you want to use exim and sendmail
   sendmail_exim_fix: false
 
@@ -199,7 +203,7 @@ defaults: &defaults
   cloudfiles_images_container: 'Image Backup'
 
   # Donations
-  
+
   # Leave this blank to not show the request for donations
   # Use paypal for recurring donations
   paypal_hosted_button_id: ""
